manifest/comfyui.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: comfyui
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: comfyui-ingress
  namespace: comfyui
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: ingress-nginx-internal
  rules:
  - host: comfyui.<path:stringreplacesecret#domain>
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: comfyui
            port:
              number: 8188
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: comfyui-http
  namespace: comfyui
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  parentRefs:
  - name: internal
    namespace: gateway
    sectionName: https
  hostnames:
  - "comfyui.<path:stringreplacesecret#domain>"
  rules:
  - backendRefs:
    - name: comfyui
      port: 80
